--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>
-		Photo Libraries for
+		GoTo Photo Gallery of
 	</h1>
 	<nav>
 		<a href="./curiosity/">Curiosity Rover</a>
