minor changes in text

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<a href="./curiosity/">Curiosity Rover</a>
 		<p>Fetches Photos from NASA's API which requires an API key</p>
 		<a href="./curiosity-traversal/">Curiosity Traversable</a>
-		<p>Fetches Photos from NASA API and enable you traverse it according to your choice</p>
+		<p>Fetches Photos from NASA API and enable you to traverse it according to your choice</p>
 		<a href="./dog">Dog</a>
 		<p>
-			Fetches breeds and then dog photos accordingly from Dog CEO API and renders it
+			Fetches dog breeds and then dog photos accordingly from Dog CEO API and renders it
 		</p>
 		<a href="./courses">Coding Ninjas Courses</a>
 		<p>Renders data from Coding Ninja's courses API into courses cards </p>
