add titles in html

--- a/courses/index.html
+++ b/courses/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Ajax</title>
+    <title>Courses nddL4Y0mmpm7IjuLzcuNi4m3WyreMNB3PjrGAB0Z2vtkPiyPuLqKkUWpE7RuyOdvohrFbsjdtOTn691kvO</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
